This file documents the revision history for mod_gearman.

0.9    Wed...
          - added debian packaging files (thanks Stig Sandbeck Mathisen)
          - increased max output to 64k
          - fixed problem with uppercase service descriptions in send_gearman

0.8    Wed Nov 17 14:11:54 CET 2010
          - added send_multi (Matthias Flacke)
          - fixed checks with popen/exec

0.7    Wed Nov  3 14:01:23 CET 2010
          - added identifier to worker config. Usefull when running more than one worker per host
          - added spec file for building rpms
          - removed duplicate errors about connection problems
          - fixed logging when loaded after the livestatus module

0.6    Wed Oct 13 09:25:14 CEST 2010
          - added flexible column size for gearman_top
          - fixed starting status worker on reload
          - fixed graceful shutdown of gearmand
          - fixed bug in latency calculation
          - fixed bug in returing results

0.5    Fri Oct  1 08:18:06 CEST 2010
          - added check for minimum event broker options
          - added worker thresholds to check_gearman
          - added check in configure if users exists
          - changed performance data for check_gearman
          - initscript no uses su -s instead of su
          - added chown of logfile dir to make install

0.4    Sat Sep 25 23:15:26 CEST 2010
          - added gearman_top
          - added version to check_gearman and send_gearman
          - added version to output of worker status
          - added worker name to error output of plugins
          - fixed daemon mode

0.3    Mon Sep 20 09:43:55 CEST 2010
          - added check_gearman to monitor job server and worker
          - added send_gearman to submit passive results
          - fixed make dist

0.2    Tue Sep 14 09:30:31 CEST 2010
          - added support for config files
          - fixed sending perfdata even when disabled by "process_performance_data" setting
