@@ -28,7 +28,7 @@
 #define MOD_GM_COMMON_H
 
 /* constants */
-#define GM_VERSION                  "0.8"
+#define GM_VERSION                  "0.9"
 #define GM_ENABLED                      1
 #define GM_DISABLED                     0
 #define GM_BUFFERSIZE               98304
