@@ -1,5 +1,5 @@
 Name:          mod_gearman
-Version:       0.8
+Version:       0.9
 Release:       3
 License:       GNU Public License version 2
 Packager:      Olivier Raginel <babar@cern.ch>
