@@ -3,6 +3,7 @@ This file documents the revision history for mod_gearman.
 0.9    Wed...
           - added debian packaging files (thanks Stig Sandbeck Mathisen)
           - increased max output to 64k
+          - fixed problem with too low number of workers after running for a while
           - fixed problem with uppercase service descriptions in send_gearman
 
 0.8    Wed Nov 17 14:11:54 CET 2010
